--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --project ./",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "start:dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -40,7 +41,8 @@
     "@types/pg-format": "^1.0.1",
     "@types/sendgrid": "^4.3.0",
     "faker": "^5.5.3",
-    "ts-node": "^10.2.1",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.4"
   }
 }
