--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --project ./",
     "start": "node ./dist/index.js",
-    "start:dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register index.ts\""
   },
   "author": "",
   "license": "ISC",
