--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/sendgrid": "^4.3.0",
     "faker": "^5.5.3",
     "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.3.4"
   }
