--- a/package.json
+++ b/package.json
@@ -41,10 +41,32 @@
     "@types/node": "^15.12.4",
     "@types/pg-format": "^1.0.1",
     "@types/sendgrid": "^4.3.0",
+    "eslint": "^8.35.0",
     "faker": "^5.5.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.3.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "*.js": [
+        "prettier --config .prettierrc --write .",
+        "eslint --fix",
+        "git add"
+      ],
+      "*.ts": [
+        "prettier --config .prettierrc --write .",
+        "eslint --fix",
+        "git add"
+      ]
+    }
   }
 }
